Restore CSS color variables to :root
Added CSS variables for theming and styling.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     :root{
+                      --bg:#050814;
+                --accent:#d4af37;
+                --accent-light:#e8c547;
+                --accent-bright:#ffd700;
+                --text:#f5f5f5;
+                --muted:#8a92a8;
+                --card:#0b1022;
+                --grid:#141c33;
+                --radius:16px;
     }
 
     *{margin:0;padding:0;box-sizing:border-box;}
