--- a/index.html
+++ b/index.html
@@ -1398,7 +1398,7 @@
   </section>
 
   <section id="projects" class="angled fade-in">
-    <div class="section-label">Selected Projects</div>
+    <div class="section-label">Projects</div>
     <h2 class="section-title">Analytics & ML Case Studies</h2>
     <p class="section-desc">
       A closer look at three end‑to‑end projects from your resume that combine modelling, governance, and business impact.
@@ -1538,7 +1538,7 @@
       <div class="edu-card">
         <div class="edu-title">Master of Business Analytics</div>
         <div class="edu-meta">Sacred Heart University · Fairfield, CT · May 2024</div>
-        <div class="edu-detail">GPA: 3.7 / 4.0 · Coursework in Data Strategy, BI Systems, Predictive Analytics, Data Governance, Advanced SQL, and Python.</div>
+        <div class="edu-detail">GPA: 3.4 / 4.0 · Coursework in Data Strategy, BI Systems, Predictive Analytics, Data Governance, Advanced SQL, and Python.</div>
       </div>
       <div class="edu-card">
         <div class="edu-title">Bachelor of Commerce in Computer Applications</div>
