--- a/index.html
+++ b/index.html
@@ -1538,7 +1538,7 @@
         botMsg.textContent = data.response;
       } else {
         // Temporary fallback message with link to full bot
-        botMsg.innerHTML = `I'm currently being set up! For now, you can chat with me directly at <a href="https://poe.com/RishiPortfolioBot" target="_blank" style="color:#FFC107;text-decoration:underline">poe.com/RishiPortfolioBot</a>. I'll be fully integrated here soon! 🚀`;
+        botMsg.innerHTML = `<iframe src="https://poe.com/RishiPortfolioBot" style="width:100%;height:400px;border:none;border-radius:10px;" allow="clipboard-write"></iframe>`;
       }
       
       chatMessages.appendChild(botMsg);
