--- a/index.html
+++ b/index.html
@@ -1514,12 +1514,10 @@
     try {
       // Call Poe API - You'll need to set up a backend endpoint
       // For now, using a simulated response
-      const response = await fetch('https://poe.com/api/chat', {
+      const response = await fetch('/api/chat', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({
-          bot: 'RishiPortfolioBot',
-          message: message
+        body: JSON.stringify({ message: message })
         })
       }).catch(() => {
         // Fallback: Direct iframe approach
@@ -1535,7 +1533,7 @@
       
       if (response.ok) {
         const data = await response.json();
-        botMsg.textContent = data.response;
+        botMsg.textContent = data.reply;
       } else {
         // Temporary fallback message with link to full bot
         botMsg.innerHTML = `<iframe src="https://poe.com/RishiPortfolioBot" style="width:100%;height:400px;border:none;border-radius:10px;" allow="clipboard-write"></iframe>`;
