Chat window closed by default - only icon visible

--- a/index.html
+++ b/index.html
@@ -1443,6 +1443,7 @@
   
   @media (max-width: 768px) {
     #chat-widget-window {
+        display: none;
       width: calc(100vw - 40px);
       height: calc(100vh - 140px);
       right: 20px;
