--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
       --radius-md: 12px;
       --radius-sm: 999px;
       --shadow-card: 0 25px 60px rgba(15, 23, 42, 0.9);
+        --shadow-glow: 0 0 30px rgba(56, 189, 248, 0.15);
+          --shadow-card-hover: 0 25px 50px -12px rgba(0, 0, 0, 0.5), 0 0 25px rgba(56, 189, 248, 0
+            --gradient-primary: linear-gradient(135deg, #38bdf8 0%, #0ea5e9 50%, #06b6d4 100%);
+              --gradient-card: linear-gradient(135deg, rgba(56, 189, 248, 0.05) 0%, rgba(14, 165, 233, 0.02) 100%);
+                --spacing-section: 100px;.1);
       --shadow-soft: 0 18px 40px rgba(15, 23, 42, 0.7);
       --transition-fast: 0.18s ease-out;
       --transition-med: 0.25s ease-out;
@@ -167,6 +172,8 @@
       padding: 28px 4px 24px;
       align-items: center;
       position: relative;
+        min-height: 100vh;
+          background: linear-gradient(135deg, rgba(2, 6, 23, 0.95) 0%, rgba(2, 6, 23, 0.98) 100%);
     }
 
     .hero__content {
@@ -238,6 +245,11 @@
       background: linear-gradient(135deg, var(--accent-strong), #22c55e);
       color: #0b1120;
       box-shadow: 0 18px 40px rgba(8, 47, 73, 0.9);
+        font-weight: 600;
+          text-transform: uppercase;
+            letter-spacing: 0.5px;
+              position: relative;
+                overflow: hidden;
     }
 
     .btn--primary:hover {
@@ -378,7 +390,7 @@
 
     /* ===== Sections ===== */
     .section {
-      padding: 28px 4px 24px;
+      padding:var(--spacing-section) 4px;
     }
 
     .section--alt {
@@ -429,6 +441,8 @@
       position: relative;
       overflow: hidden;
     }
+      transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+        border: 1px solid rgba(56, 189, 248, 0.15);
 
     .card::before {
       content: "";
@@ -440,6 +454,11 @@
       pointer-events: none;
     }
 
+.card:hover {
+  transform: translateY(-8px);
+    box-shadow: var(--shadow-card-hover);
+      border-color: rgba(56, 189, 248, 0.4);
+      }
     .card:hover::before {
       opacity: 1;
     }
