--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
       background: rgba(15, 23, 42, 0.9);
     }
 
-    /* hero “dashboard” panel */
+    /* hero "dashboard" panel */
     .hero__stats-board {
       margin-top: 18px;
       display: grid;
@@ -401,7 +401,7 @@
       color: #e5e7eb;
     }
 
-    /* hero right “card” */
+    /* hero right "card" */
     .hero__visual {
       position: relative;
       min-height: 260px;
@@ -923,7 +923,7 @@
           RevOps · Analytics · Automation
         </div>
         <h1 class="hero__title">
-          I’m <span class="accent">Hrushikesh Singh Bondili</span><br />
+          I'm <span class="accent">Hrushikesh Singh Bondili</span><br />
           RevOps Analyst & Business Analyst
         </h1>
         <p class="hero__subtitle">
@@ -1194,8 +1194,8 @@
       <div class="grid testimonials">
         <article class="testimonial card anim-fade-up">
           <p>
-            “Hrushikesh quickly translated complex revenue requirements into intuitive dashboards and models.
-            Our leadership finally had a single source of truth for pipeline health.”
+            "Hrushikesh quickly translated complex revenue requirements into intuitive dashboards and models.
+            Our leadership finally had a single source of truth for pipeline health."
           </p>
           <div class="testimonial__meta">
             <span class="testimonial__name">RevOps Leader</span>
@@ -1204,8 +1204,8 @@
         </article>
         <article class="testimonial card anim-fade-up">
           <p>
-            “His automation of our reporting stack saved the team hours every week and dramatically improved
-            data quality across Salesforce and billing systems.”
+            "His automation of our reporting stack saved the team hours every week and dramatically improved
+            data quality across Salesforce and billing systems."
           </p>
           <div class="testimonial__meta">
             <span class="testimonial__name">Sales Operations Manager</span>
@@ -1219,7 +1219,7 @@
     <section class="section section--alt" id="contact">
       <header class="section__header">
         <div class="section__eyebrow">Contact</div>
-        <h2>Let’s Work Together</h2>
+        <h2>Let's Work Together</h2>
         <p>Open to RevOps, revenue analytics, and business analytics roles (remote or hybrid).</p>
       </header>
       <div class="contact-layout">
@@ -1248,7 +1248,7 @@
           <input
             type="hidden"
             name="_next"
-            value="https://rishisingh1999.github.io/my-portfolio-website/#contact"
+            value="https://animated-garbanzo-7499w544x46hxg44.github.dev/"
           />
 
           <div class="field">
@@ -1288,7 +1288,7 @@
             Send Message
           </button>
           <p class="form-status" id="form-status">
-            Form sends via FormSubmit. You’ll be redirected after submit.
+            Your message will be emailed to Hrushikesh. Form may take 2-5 seconds to process.
           </p>
         </form>
       </div>
@@ -1427,7 +1427,7 @@
     fakeSubmit?.addEventListener("click", () => {
       if (formStatus) {
         formStatus.textContent =
-          "Sending via FormSubmit… if you are not redirected, please email me directly.";
+          "Sending… Your message is being processed. Please wait.";
       }
     });
 
